--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
     <script type="text/jsx">
       const app = document.getElementById("app");
 
-      function Header() {
-        return <h1>Develop. Preview. Ship. 🚀</h1>;
+      function Header({title}) {
+        return <h1>{title}</h1>;
       }
 
-      ReactDOM.render(<Header />, app);
+      function HomePage() {
+        const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
+        return <div>
+
+          <Header title="Develop. Preview. Ship. 🚀" />
+          <ul>
+            {names.map((name) => (
+              <li key={name}>{name}</li>
+            ))}
+          </ul>
+        </div>
+      }
+
+      ReactDOM.render(<HomePage />, app);
     </script>
   </body>
 </html>
