--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       const app = document.getElementById("app");
 
       function Header({title}) {
-        return <h1>{title}</h1>;
+        return <h1>{title ? title : "Default title"}</h1>
       }
 
       function HomePage() {
@@ -20,16 +20,19 @@
         function handleClick() {
           setLikes(likes + 1)
         }
-        return <div>
 
-          <Header title="Develop. Preview. Ship. 🚀" />
-          <ul>
-            {names.map((name) => (
-              <li key={name}>{name}</li>
-            ))}
-          </ul>
-          <button onClick={handleClick}>Like ({likes})</button>
-        </div>
+        return (
+
+          <div>
+            <Header title="Develop. Preview. Ship. 🚀" />
+            <ul>
+              {names.map((name) => (
+                <li key={name}>{name}</li>
+                ))}
+              </ul>
+              <button onClick={handleClick}>Like ({likes})</button>
+            </div>
+            )
       }
 
       ReactDOM.render(<HomePage />, app);
